# tprf

./: .clang-tidy  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  requirements.txt
c++/: CMakeLists.txt  channel_grouping.hpp  chi_from_gg2.cpp  chi_from_gg2.hpp  fourier.cpp  fourier.hpp  fourier_impl.hpp  freq_conv.cpp  freq_conv.hpp  hubbard_atom.cpp  hubbard_atom.hpp  lattice.cpp  lattice.hpp  linalg.cpp  linalg.hpp  mpi.hpp  types.hpp
c++/fourier/: fourier.hpp  fourier_common.cpp  fourier_common.hpp  fourier_lattice.cpp  fourier_matsubara.cpp
c++/lattice/: chi_imfreq.cpp  chi_imfreq.hpp  chi_imtime.cpp  chi_imtime.hpp  common.hpp  eliashberg.cpp  eliashberg.hpp  fourier_interpolation.cpp  fourier_interpolation.hpp  gf.cpp  gf.hpp  gw.cpp  gw.hpp  lindhard_chi00.cpp  lindhard_chi00.hpp  lindhardt_chi00.cpp  lindhardt_chi00.hpp  rpa.cpp  rpa.hpp
c++/triqs_tprf/: CMakeLists.txt  channel_grouping.hpp  chi_from_gg2.cpp  chi_from_gg2.hpp  freq_conv.cpp  freq_conv.hpp  hubbard_atom.cpp  hubbard_atom.hpp  lattice.hpp  linalg.cpp  linalg.hpp  mpi.hpp  toto.cpp  toto.hpp  types.hpp
c++/triqs_tprf/fourier/: fourier.hpp  fourier_common.cpp  fourier_common.hpp  fourier_lattice.cpp  fourier_matsubara.cpp
c++/triqs_tprf/lattice/: chi_imfreq.cpp  chi_imfreq.hpp  chi_imtime.cpp  chi_imtime.hpp  chi_retime.cpp  chi_retime.hpp  common.hpp  dynamical_screened_interaction.cpp  dynamical_screened_interaction.hpp  eliashberg.cpp  eliashberg.hpp  fourier.hpp  fourier_gf.hpp  fourier_interpolation.cpp  fourier_interpolation.hpp  gf.cpp  gf.hpp  gw.cpp  gw.hpp  lattice_utility.cpp  lattice_utility.hpp  lindhard_chi00.cpp  lindhard_chi00.hpp  rpa.cpp  rpa.hpp
doc/: CMakeLists.txt  ChangeLog.md  about.rst  changelog.rst  conf.py  conf.py.in  documentation.rst  faqs.rst  index.rst  install.rst  issues.rst
doc/_templates/: sideb.html
doc/cpp2rst_generated/triqs_tprf/: chi0_from_gg2_PH.rst  chi0_from_gg2_PP.rst  chi0_tr_from_grt_PH.rst  chi0_w0r_from_grt_PH.rst  chi0q_from_chi0r.rst  chi0q_from_g_wk_PH.rst  chi0q_sum_nu.rst  chi0q_sum_nu_q.rst  chi0q_sum_nu_tail_corr_PH.rst  chi0r_from_chi0q.rst  chi0r_from_gr_PH.rst  chi0r_from_gr_PH_nompi.rst  chi_from_gg2_PH.rst  chi_from_gg2_PP.rst  chi_tr_from_chi_wr.rst  chi_w0r_from_chi_tr.rst  chi_wk_from_chi_wr.rst  chi_wr_from_chi_tr.rst  chi_wr_from_chi_wk.rst  chiq_from_chi0q_and_gamma_PH.rst  chiq_sum_nu_from_chi0q_and_gamma_PH.rst  dynamical_screened_interaction_W_wk.rst  dynamical_screened_interaction_W_wk_from_generalized_susceptibility.rst  eliashberg_product.rst  eliashberg_product_fft.rst  fourier_tr_to_wr.rst  fourier_wk_to_wr.rst  fourier_wr_to_tr.rst  fourier_wr_to_wk.rst  gamma_PP_singlet.rst  gamma_PP_triplet.rst  gw_self_energy.rst  gw_sigma_tr.rst  gw_sigma_wk_serial_fft.rst  identity.rst  inverse.rst  lattice_dyson_g0_wk.rst  lattice_dyson_g_w.rst  lattice_dyson_g_wk.rst  lindhard_chi00_wk.rst  (+3 more)
doc/reference/: bse.rst  cpp_reference.rst  doc_root.hpp  eliashberg.rst  impurity.rst  lattice.rst  linalg.rst  python_reference.rst
doc/theory/: boundary_conditions.rst  derivation_index_pairing.rst  eliashberg.rst  linear_response.rst  matrix_rpa.rst  notation.rst  rpa.rst  single_particle_gf.rst  vertex.rst
doc/user_guide/: Bethe-Salpeter Equation on the Hubbard atom.ipynb  Lattice BSE on Hubbard atom.ipynb  Linearized Eliashberg equation on the attractive Hubbard model.ipynb  Mean field and RPA response of the one dimensional Hubbard model.ipynb  PHT_Hubbard_Model.ipynb  Solving the linearized Eliashberg equation in the random phase approximation limit.ipynb  Square lattice susceptibility.ipynb  notebook.mplstyle  plotting_tools.py
doc/user_guide/dmft_susceptibility/: calc_bse.py  calc_field.py  calc_g2.py  calc_sc.py  common.py  fitdlr.py  (+7 more)
python/: CMakeLists.txt  __init__.py  analytic_hubbard_atom.py  bse.py  chi_from_gg2_desc.py  eliashberg.py  fourier_desc.py  freq_conv_desc.py  hartree_solver.py  hf_response.py  hf_solver.py  hubbard_atom_desc.py  lattice_desc.py  lattice_utils.py  linalg_desc.py  matrix_rpa.py  plot.py  rpa_tensor.py  super_lattice.py  version.py.in  wannier90.py
python/triqs_tprf/: CMakeLists.txt  Dummy.py  OperatorUtils.py  ParameterCollection.py  __init__.py  analytic_hubbard_atom.py  ase_timing.py  bse.py  chi_from_gg2_desc.py  dbse.py  eliashberg.py  fitdlr.py  freq_conv_desc.py  gw.py  gw_solver.py  hf_response.py  hf_solver.py  hubbard_atom_desc.py  lattice_desc.py  lattice_utils.py  linalg_desc.py  logo.py  matrix_rpa.py  numpy_compat.py  plot.py  plotting_tools.py  rpa_rt.py  rpa_tensor.py  super_lattice.py  symmetries.py  tight_binding.py  toto_module_desc.py  utilities.py  vasp_crpa_parsers.py  version.py.in  wannier90.py
share/: CMakeLists.txt  triqs_tprf.modulefile.in  triqs_tprfvars.sh.in
share/cmake/: CMakeLists.txt  triqs_tprf-config-version.cmake.in  triqs_tprf-config.cmake.in
test/: CMakeLists.txt
test/c++/: CMakeLists.txt  bubble.cpp  chi0_wk_to_from_chi0_wr.cpp  chi0k_to_from_chi0r.cpp  g_wk_to_from_g_wr.cpp  gf_inverse.cpp  gk_to_from_gr.cpp  hubbard_atom_test.cpp  linalg_ops.cpp  mpi_and_openmp.cpp  toto.cpp
test/python/: 1d_hubbard_hf_rpa.py  1d_hubbard_hf_rpa_2site_AFM.py  1d_hubbard_hf_spin_rot_inv.py  CMakeLists.txt  Dummy.out.h5  Dummy.py  Toto.py  V_orb_to_band.py  add_fake_bosonic_mesh.py  bse_and_rpa_loc_vs_latt.py  chain.py  chi00_square_lattice.py  chi00_square_lattice_dlr.py  chi00_square_lattice_fk.py  chi0_nk_at_specific_w.py  chi0_nr_at_specific_w.py  chi0_save_memory.py  chi0_square_latt.py  chi4_iw_from_tau.py  compare_general_rpa_to_matrix_rpa.py  construct_densdens_V.py  create_eliashberg_benchmark_data.py  dynamical_screened_interaction_w.py  dynamical_screened_interaction_w_from_generalized_susceptibility.py  eliashberg.py  eliashberg_fft.py  eliashberg_impl_comparison.py  fitdlr_hubbard_atom.py  g0w_separate_kpoints.py  g_iw_from_tau.py  g_wk_to_from_g_wr.py  g_wk_to_from_g_wr_py.py  gaussian_dos.py  gf.py  gk_to_from_gr.py  gw.py  gw_compare_Matsubara_realFreq.py  gw_compare_spectralRep_and_direct.py  gw_dimer.py  gw_dlr.py  (+23 more)
(+150 files in other folders)
