# Copy h5 files to binary dir
file(GLOB_RECURSE all_h5_tgz_files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ref.h5 *.tar.gz)
foreach(file ${all_h5_tgz_files})
  configure_file(${file} ${file} COPYONLY)
endforeach()

add_python_test(chi4_iw_from_tau)
add_python_test(g_wk_to_from_g_wr_py)
add_python_test(chi00_square_lattice)
add_python_test(chi0_save_memory)
add_python_test(chi0_nr_at_specific_w)
add_python_test(chi0_nk_at_specific_w)
add_python_test(solve_lattice_bse_at_specific_w)
add_python_test(bse_and_rpa_loc_vs_latt)
add_python_test(mean_field)
add_python_test(mean_field_kanamori)
add_python_test(hartree_response)
add_python_test(1d_hubbard_hf_rpa)
add_python_test(1d_hubbard_hf_spin_rot_inv)
add_python_test(1d_hubbard_hf_rpa_2site_AFM)
add_python_test(compare_general_rpa_to_matrix_rpa)
add_python_test(interaction_tensor_charge_spin_factorization)
add_python_test(symmetrize_gf)
add_python_test(add_fake_bosonic_mesh)

add_subdirectory(eliashberg)
